--- a/assets/css/less/nesi/heros.less
+++ b/assets/css/less/nesi/heros.less
@@ -2,7 +2,6 @@
 	border-bottom: 1px double #e1e1e1;
 	padding-bottom: 1px;
 	@height:460px;
-	margin-top: -20px;
 	.item{
 		min-height: @height;
 		.clearfix();
